--- a/app/src/index.html
+++ b/app/src/index.html
@@ -13,7 +13,7 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
+    <!-- <link rel="icon" type="image/x-icon" href="/favicon.ico"/> -->
     
     <script src="js/bundle.js"></script>
 
