--- a/app/src/doctor.html
+++ b/app/src/doctor.html
@@ -95,6 +95,10 @@
                                 <td id="email"></td>
                             </tr>
                             <tr>
+                                <th>Qualification:</th>
+                                <td id="qual"></td>
+                            </tr>
+                            <tr>
                                 <th>Age:</th>
                                 <td id="age"></td>
                             </tr>
@@ -167,15 +171,18 @@
 
         var a = 0;
         var em = 0;
+        var ql = 0;
         var b = 0;
         contractInstance.get_doctor.call(key, {gas: 1000000},function(error, result){
             if(!error){
                 a = result[0]; 
                 em = result[1];
-                b = result[2];
+                ql = result[2];
+                b = result[3];
                 docName = a;
                 $("#name").html(a);
                 $("#email").html(em);
+                $("#qual").html(ql);
                 $("#age").html(b.c[0]);
             }
                 
@@ -193,7 +200,7 @@
                     contractInstance.get_patient.call(patientAddress, {gas: 1000000}, function(error, result){
                         var table = document.getElementById("viewPatient");
                         if(!error) {
-                            [a,em,b] = result;
+                            [a,em,ql,b] = result;
                             console.log(a);
 
                             var row = table.insertRow(index+1);
