--- a/app/src/doctor.html
+++ b/app/src/doctor.html
@@ -127,6 +127,7 @@
                                 <th>Patient</th>
                                 <th class="publicKeyPatient">Public Key</th>
                                 <th>Action</th>
+                                <th>Email</th>
                             </tr>
                         </table>
                     </div>
@@ -207,10 +208,14 @@
                             var cell1 = row.insertCell(0);
                             var cell2 = row.insertCell(1);
                             var cell3 = row.insertCell(2);
+                            var cell4 = row.insertCell(3);
+                            var cell5 = row.insertCell(4);
                             cell2.className = "publicKeyPatient";
                             cell1.innerHTML = a;
                             cell2.innerHTML = patientAddress;
                             cell3.innerHTML = '<input class="btn btn-success" onclick="showRecords(this)" id="viewRecordsButton" type="button" value="View records"></input>';
+                            cell4.innerHTML = em;
+                            cell5.innerHTML = "<a href='https://calendar.google.com/calendar/u/0/r'><button type='submit'>Schedule Appointment</button></a>";
 
                             
                         }
@@ -230,6 +235,7 @@
         var table = document.getElementById("viewPatient");
         var index = element.parentNode.parentNode.rowIndex;
         var patientAddress = table.rows[index].cells[1].innerHTML;
+        var patientEmail = table.rows[index].cells[3].innerHTML;
 
         if (toggleRecordsButton%2 == 0){
 
@@ -336,6 +342,7 @@
     {
         var table = document.getElementById("viewPatient");
         var patientAddress = table.rows[index].cells[1].innerHTML;
+        var patientEmail = table.rows[index].cells[3].innerHTML;
       
         console.log(patientAddress);
         var diagnosis = $("#ailmentsList"+patientAddress).val();
