hospital backgroud image change

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -56,7 +56,7 @@ nav ul li:hover
 
 </head>
 
-<body style="background-image: url('./images/Okayama_Red_Cross_Hospital.jpg');background-repeat: no-repeat;background-attachment: fixed;background-size: cover;">
+<body style="background-image: url('./images/hosp.webp');background-repeat: no-repeat;background-attachment: fixed;background-size: cover;">
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-static-top" role="navigation" style="background-color: #0004;">
@@ -116,7 +116,7 @@ nav ul li:hover
 
 
     <div class="alert alert-warning col-sm-8 col-sm-offset-2" style="display: none;opacity: 0.9;">                                               
-        <h4 class="text-center"><strong>Unregistered user!!! </strong> <br><br>  Metamask Account is required for Login<br><br> 
+        <h4 class="text-center"><strong>Unregistered user!!! </strong> <br><br>  Metamask Account is required for Login<br><br> <a href="https://chrome.google.com/webstore/detail/metamask/nkbihfbeogaeaoehlefnkodbefgpgknn">Create Metamask Account</a><br><br>
              Click <a href="./register.html">  here  </a> to register.</h3>
                         
 </div>
